fixing bug with dropdown menu not covering galery

--- a/src/js/components/Navigation/_navigation.scss
+++ b/src/js/components/Navigation/_navigation.scss
@@ -7,6 +7,7 @@ $navbarHeight: 11%;
   height: $navbarHeight;
   position: fixed;
   width: 100%;
+  z-index: 2;
   @include media-tablet {
     height: 10%;
   }
